# RecomporAPI

./: .gitignore  .gitignore.txt  README.md  main.py
API/: main.py  segurança.py
API/routes/: compostagem_routes.py  composteira_routes.py  user_routes.py
API/schemas/: user_schema.py  (+2 more)
database/: fake_db.py
poetry_recomporapi/: .env  README.md  alembic.ini  database.db  pyproject.toml  requirements.txt  run_api.bat
poetry_recomporapi/API/: __init__.py  database.py  main.py  security.py  segurança.py  settings.py
poetry_recomporapi/API/database/: database.db  database.py  fake_db.py
poetry_recomporapi/API/models/: User.py  __init__.py  compostagem.py  compostagens.py  composteira.py  composteiras.py  table_registry.py  user.py  user_model.py
poetry_recomporapi/API/routes/: compostagem_routes.py  composteira_routes.py  user_routes.py
poetry_recomporapi/API/schemas/: compostagem_schema.py  composteira_schema.py  token_schema.py  user_schema.py
poetry_recomporapi/migrations/: env.py
poetry_recomporapi/migrations/versions/: 0bad403f6907_create_users_table.py  14dce6b93e6e_composteira_e_compostagens_tables.py  27c80d0fe85c_initial_schema_final.py  2cd54f950fd5_create_all_tables.py  3c75b39c543f_create_users_table.py  630763942dac_adicionando_uptaded_at.py  7a4120fad406_create_all_tables.py  b892ccfbdec3_create_users_table.py  c7ca6d1373af_criando_tabela_de_usuarios.py  dd2ffa44f296_criação_das_tabelas_users_composteira_.py
poetry_recomporapi/poetry_recomporapi/: main.py
poetry_recomporapi/poetry_recomporapi/database/: fake_db.py
poetry_recomporapi/poetry_recomporapi/models/: User.py
poetry_recomporapi/poetry_recomporapi/routes/: compostagem_routes.py  composteira_routes.py  user_routes.py
poetry_recomporapi/poetry_recomporapi/schemas/: user_schema.py
poetry_recomporapi/tests/: conftest.py  test_app.py  test_db.py  test_security.py
routes/: composteira_routes.py
