[project]
name = "poetry-recomporapi"
version = "0.1.0"
description = ""
authors = [
    {name = "mnzlipe",email = "luizfelipemam2007@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

