[project]
name = "poetry-recomporapi"
version = "0.1.0"
description = ""
authors = [
    {name = "mnzlipe",email = "luizfelipemam2007@gmail.com"},
    {name = "Celso Hector",email = "hector.c@estudante.ifro.edu.br"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "tzdata (>=2025.2,<2026.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

